[package]
name = "clustering"
version = "0.1.0"
authors = ["Oleksandr Shevchuk <oleksandr.shevchuk@binary-studio.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "clustering"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.10.1"
rayon = "1.3.0"